fix khi checkout mà addressbook đang trống (do jpa không tìm được record nào thì trả về empty list chứ không phải trả về null)